# auto-dev-projects

./: .gitignore  AUTO_DEV_LOG.md  AUTO_DEV_STATE.json  README.md
afterhours/: CLAUDE.md  Cargo.toml  README.md  SUMMARY.md  index.html  style.css
aisaji/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  package.json
asu-no-eki/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
asu-no-eki/src/asu_no_eki/: __init__.py  rotator.py  server.py  stations.py
asu-no-eki/static/: app.js  style.css
asu-no-eki/templates/: index.html
asu-no-eki/tests/: test_api.py  test_rotator.py  test_stations.py
bungou-reki/src-tauri/: Cargo.toml  tauri.conf.json
bungou-reki/src-tauri/capabilities/: default.json
bungou-reki/src-tauri/src/: battle.rs  calendar.rs  data.rs  lib.rs  main.rs  state.rs
denshou-bako/: .gitignore  CLAUDE.md  PLAN.md  README.md  RUNNING.md  SUMMARY.md  pyproject.toml
denshou-bako/src/denshou_bako/: __init__.py  audio.py  book.py  categories.py  cli.py  questions.py  session.py  wiring.py
denshou-bako/tests/: test_audio.py  test_book.py  test_categories.py  test_cli.py  test_questions.py  test_session.py
fukugyou-bubble/src-tauri/: Cargo.toml  tauri.conf.json
fukugyou-bubble/src-tauri/capabilities/: default.json
fukugyou-bubble/src-tauri/src/: data.rs  game.rs  lib.rs  main.rs
futari-koyomi/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
futari-koyomi/app/: banned.py  holidays.py  main.py  store.py
futari-koyomi/app/static/: app.js  style.css
futari-koyomi/app/templates/: index.html
futari-koyomi/tests/: test_banned.py  test_holidays.py  test_routes.py  test_store.py
futari-yoho/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
futari-yoho/src/futari_yoho/: __init__.py  app.py  cli.py  dates.py  models.py  storage.py  weather.py
futari-yoho/tests/: test_app_smoke.py  test_dates.py  test_models.py  test_storage.py  test_weather.py
gochisou-goyomi/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
gochisou-goyomi/src/gochisou_goyomi/: __init__.py  __main__.py  app.py  calendar.py  holidays.py  state.py
gochisou-goyomi/tests/: test_calendar.py
hachi-kenshi/: CLAUDE.md  Cargo.toml  PLAN.md  README.md  SUMMARY.md
hachi-kenshi/src/: banned.rs  case.rs  cause.rs  lib.rs  score.rs  verdict.rs
hachi-kenshi/tests/: banned_test.rs  case_test.rs  cause_test.rs  score_test.rs  verdict_test.rs
hachi-kenshi/www/: index.html  main.js  style.css
hibi-no-mukashi/: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SUMMARY.md
hibi-no-mukashi/src/: lib.rs  motifs.rs  select.rs  vignettes.rs
hibi-no-mukashi/tests/: motifs.rs  select.rs  vignettes.rs
hibi-no-mukashi/web/: app.js  index.html  style.css
juugobyou/: CLAUDE.md  Cargo.toml  PLAN.md  README.md  SUMMARY.md
juugobyou/src/: lib.rs  prompts.rs  voice.rs
juugobyou/tests/: prompts.rs  voice.rs
juugobyou/web/: app.js  index.html  style.css
kisanae-chou/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  notebook.ipynb  pyproject.toml
kisanae-chou/kisanae_chou/: __init__.py  banned.py  data.py  layout.py  palette.py  plots.py  run.py
kisanae-chou/tests/: test_banned.py  test_data.py  test_layout.py  test_palette.py  test_plots.py
kotoba-mado/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
kotoba-mado/src/kotoba_mado/: __init__.py  aggregate.py  categories.py  cli.py  models.py  render.py  storage.py
kotoba-mado/tests/: test_aggregate.py  test_categories.py  test_cli.py  test_models.py  test_render.py  test_storage.py
kyokuori/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
kyokuori/notebooks/: kyokuori.ipynb
kyokuori/src/kyokuori/: __init__.py  palette.py  patterns.py  renderer.py  tracks.py
kyokuori/tests/: test_palette.py  test_patterns.py  test_renderer.py  test_tracks.py
kyuufu/: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
kyuufu/src/kyuufu/: __init__.py  bot.py  cultural.py  messages.py  responder.py  scheduler.py
kyuufu/tests/: test_bot_helpers.py  test_cultural.py  test_messages.py  test_responder.py  test_scheduler.py
meme-fuda/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
meme-fuda/src/meme_fuda/: __init__.py  app.py  cli.py  models.py  render.py  storage.py  templates.py
meme-fuda/tests/: test_app_smoke.py  test_models.py  test_render.py  test_storage.py  test_templates.py
nestplan/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
nestplan/nestplan/: __init__.py  __main__.py  app.py  budget.py  models.py  storage.py
nestplan/tests/: run_all.py  test_budget.py  test_models.py  test_storage.py
ryogae-kan/: CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  SUMMARY.md
ryogae-kan/src/: currencies.rs  game.rs  items.rs  judge.rs  lib.rs  rng.rs  round.rs
ryogae-kan/www/: app.js  index.html  style.css
sekai-wadaichou/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
sekai-wadaichou/src/sekai_wadaichou/: __init__.py  app.py  cities.py  dossier.py  globe.py
sekai-wadaichou/tests/: test_app_smoke.py  test_cities.py  test_dossier.py  test_globe.py
sokkou-deck/: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SUMMARY.md
sokkou-deck/src/: banned.rs  deck.rs  lib.rs  normalize.rs  run.rs  stats.rs
sokkou-deck/tests/: banned_test.rs  deck_test.rs  normalize_test.rs  run_test.rs  stats_test.rs
sokkou-deck/www/: index.html  main.js  style.css
tane-kawase/: .gitignore  CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
tane-kawase/src/tane_kawase/: __init__.py  cli.py  models.py  render.py  storage.py  topics.py
tane-kawase/tests/: test_cli.py  test_models.py  test_render.py  test_storage.py  test_topics.py
tokineko/: CLAUDE.md  PLAN.md  README.md  SUMMARY.md  pyproject.toml
tokineko/src/tokineko/: __init__.py  app.py  eras.py  game.py  models.py
tokineko/src/tokineko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tokineko/tests/: test_eras.py  test_game.py  test_models.py
(+1145 files in other folders)
