[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asu-no-eki"
version = "0.1.0"
description = "明日の駅 — 1 時間通勤の会社員のための、毎朝 1 駅の都市計画 dashboard"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
asu-no-eki = "asu_no_eki.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asu_no_eki = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
