[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gochisou-goyomi"
version = "0.1.0"
description = "毎日のごはんを文化暦から提案する Textual TUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "auto-dev" }]
dependencies = [
    "textual>=8.0",
    "rich>=13.0",
]

[project.scripts]
gochisou-goyomi = "gochisou_goyomi.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
