[package]
name = "hibi-no-mukashi"
version = "0.1.0"
edition = "2021"
description = "子育てパパ・ママのための、 今日と同じ日付の静かな歴史 (Rust + WASM)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
