[package]
name = "juugobyou"
version = "0.1.0"
edition = "2021"
description = "片付けが苦手な人のための、 15 秒だけの小さなボタン (Rust + WASM)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
