[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kyokuori"
version = "0.1.0"
description = "曲織 — 音楽チャートを刺繍 / 編み物 / モザイク のパターンに織り直す Jupyter ノートブック"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test    = ["pytest>=8"]
notebook = ["jupyter>=1.0", "nbformat>=5.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
