[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokineko"
version = "1.0.0"
description = "時間旅行する猫のターミナルコンパニオン"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
tokineko = "tokineko.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
