[package]
name = "bungou-reki"
version = "0.1.0"
description = "文豪暦 — 読書家のための文学カレンダー対戦アプリ"
authors = ["auto-dev"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "bungou_reki_lib"
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "bungou-reki"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.0", features = [], optional = true }

[features]
default = []
desktop = ["tauri", "tauri-build"]
